2007-03-01  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/hal/gsthalaudiosink.c: (do_toggle_element):
	* ext/hal/gsthalaudiosrc.c: (do_toggle_element):
	  Check if the device UDI is set before trying to query HAL
	  about it and give a useful error message if it wasn't set.
	* ext/hal/hal.c: (gst_hal_get_string):
	  Don't query HAL for NULL UDIs. Passing NULL as UDI to HAL
	  gives an assertion failure in D-Bus when running with
	  DBUS_FATAL_WARNINGS=1.

2007-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Convert to new AG_GST style.

2007-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* tests/check/Makefile.am:
	* tests/check/generic/states.c: (GST_START_TEST), (states_suite):
	  add test for states

2007-02-28  Wim Taymans  <wim@fluendo.com>

	* tests/check/elements/.cvsignore:
	Add new videofilter check to .cvsignore.

2007-02-28  Wim Taymans  <wim@fluendo.com>

	* gst/avi/gstavidemux.c: (gst_avi_demux_combine_flows),
	(gst_avi_demux_process_next_entry), (gst_avi_demux_stream_data),
	(gst_avi_demux_loop), (gst_avi_demux_chain):
	Fix combined flow return. Fixes #412608.

2007-02-28  Wim Taymans  <wim@fluendo.com>

	* gst/videofilter/Makefile.am:
	Dist header..

2007-02-28  Wim Taymans  <wim@fluendo.com>

	* gst/videofilter/gstgamma.h:
	Add header too.

2007-02-28  Wim Taymans  <wim@fluendo.com>

	Patch by: Mark Nauwelaerts <manauw at skynet be>

	* gst/videofilter/Makefile.am:
	* gst/videofilter/gstgamma.c: (gst_gamma_base_init),
	(gst_gamma_class_init), (gst_gamma_init), (gst_gamma_set_property),
	(gst_gamma_get_property), (gst_gamma_calculate_tables),
	(oil_tablelookup_u8), (gst_gamma_set_caps),
	(gst_gamma_planar411_ip), (gst_gamma_transform_ip), (plugin_init):
	Port gamma filter to 0.10. Fixes #412704.

	* tests/check/Makefile.am:
	* tests/check/elements/videofilter.c: (setup_filter),
	(cleanup_filter), (check_filter), (GST_START_TEST),
	(videobalance_suite), (videoflip_suite), (gamma_suite), (main):