@@ -313,8 +313,6 @@ gst_rtpdec_change_state (GstElement * element, GstStateChange transition)
   rtpdec = GST_RTPDEC (element);
 
   switch (transition) {
-    case GST_STATE_CHANGE_PAUSED_TO_READY:
-      break;
     default:
       break;
   }
@@ -322,7 +320,9 @@ gst_rtpdec_change_state (GstElement * element, GstStateChange transition)
   ret = GST_ELEMENT_CLASS (parent_class)->change_state (element, transition);
 
   switch (transition) {
-    case GST_STATE_CHANGE_PAUSED_TO_READY:
+    case GST_STATE_CHANGE_READY_TO_PAUSED:
+    case GST_STATE_CHANGE_PLAYING_TO_PAUSED:
+      ret = GST_STATE_CHANGE_NO_PREROLL;
       break;
     default:
       break;
