@@ -1,3 +1,14 @@
+2007-03-01  Wim Taymans  <wim@fluendo.com>
+
+	* gst/rtsp/gstrtpdec.c: (gst_rtpdec_change_state):
+	Make state change to PAUSED NO_PREROLL because that's what it will be in
+	the future and rtspsrc relies on it.
+
+	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_stream_configure_transport),
+	(gst_rtspsrc_change_state):
+	Don't error out when we don't get an error from the state change
+	function.
+
 2007-03-01  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* ext/hal/gsthalaudiosink.c: (do_toggle_element):
